<resources>
    <string name="app_name">Pocket Team</string>
    <string name="add_player">Add Player</string>
    <string name="title_activity_add_player">AddPlayerActivity</string>
    <string name="add_team">Add Team</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_roster">RosterActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_team_list">TeamListActivity</string>
    <string name="title_activity_player_profile">PlayerProfileActivity</string>
    <string name="title_activity_spray_chart">SprayChartActivity</string>

    <string name="pocketTeam">Pocket Team</string>

    <string name="test">This is a test to see if the stat list works</string>
    <string-array name="Stat">
        <item >Batting Average</item>
        <item >Slugging Percentage</item>
        <item >RBI</item>
        <item >ERA</item>
        <item >Wins</item>
        <item >Losses</item>
        <item >Saves</item>
        <item >Hits</item>
        <item >Srikeouts</item>
        <item >Walks</item>
        <item >Wins</item>

    </string-array>

    <string name="bat_avg">Batting Average</string>
    <string name="era">ERA</string>
    <string name="hits">Hits</string>
    <string name="slugging_perc">Slugging Percentage</string>
    <string name="rbi">RBI</string>


    <string name="sortByBatAvgHigh">Sort By Bat Avg (High)</string>
    <string name="sortByBatAvgLow">Sort By Bat Avg (Low)</string>
    <string name="backToRoster">Back to Roster</string>
    <string name="backToProfile">Back to Profile</string>
    <string name="save">Save</string>
    <string name="sprayChart">To Spray Chart</string>
    <string name="changeEmergencyContact">Change Emergency Contact</string>
    <string name="changeEmergencyPhone">Change Emergency Phone #</string>
    <string name="changePlayerNumber">Change Player Number</string>
    <string name="changePosition">Change Player Position</string>





</resources>
