<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/spray_chart_roster"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/backToProfile"
        android:onClick="backToRosterOnCLickSpray"/>

    <item
        android:id="@+id/save_spray_chart"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/save"
        android:onClick="SaveSprayChartActivityOnClick"/>


    <item
        android:id="@+id/clear_spray_chart"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="Clear"
        android:onClick="ClearSprayChartActivityOnClick"/>
</menu>
